Fix 404 header alignment on wide viewports

--- a/_source/stylesheets/pages/_404.scss
+++ b/_source/stylesheets/pages/_404.scss
@@ -10,6 +10,12 @@
 	box-shadow: none;
 }
 
+.not-found-page [role='banner'] {
+	@include media('>=12col') {
+		margin-bottom: 0;
+	}
+}
+
 .not-found-page [role='banner'] > a {
 	margin-right: auto;
 	margin-left: auto;
